Show TOC scrollbar only when needed and prevent postamble overlap
Fixes #89.

--- a/src/readtheorg/css/readtheorg.css
+++ b/src/readtheorg/css/readtheorg.css
@@ -1054,7 +1054,7 @@ hr {
     left: 0;
     width: 300px;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     height: 100%;
     background: #343131;
     z-index: 200;
